# CourseWork-server

./: .gitignore  CMakeLists.txt  Makefile  README.md  start_server.sh  test_client.sh
data/: vcalc.conf
src/: AuthManager.cpp  AuthManager.h  Logger.cpp  Logger.h  SHA256.cpp  SHA256.h  Server.cpp  Server.h  VectorProcessor.cpp  VectorProcessor.h  main.cpp
tests/: test_server.py
